chore: fix editor z-index

--- a/web/src/less/memo-content.less
+++ b/web/src/less/memo-content.less
@@ -1,10 +1,10 @@
 @import "./mixin.less";
 
 .memo-content-text {
-  @apply w-full whitespace-pre-wrap break-words text-base leading-7;
+  @apply w-full whitespace-pre-wrap break-all text-base leading-7;
 
   > p {
-    @apply inline-block w-full h-auto mb-1 last:mb-0 text-base leading-7 whitespace-pre-wrap break-words;
+    @apply inline-block w-full h-auto mb-1 last:mb-0 text-base leading-7 whitespace-pre-wrap break-all;
   }
 
   .tag-span {
