--- a/web/src/less/usage-heat-map.less
+++ b/web/src/less/usage-heat-map.less
@@ -6,8 +6,7 @@
 @stat-day-L4-bg: #216e39;
 
 .usage-heat-map-wrapper {
-  .flex(row, flex-start, center);
-  @apply w-full h-32 flex-wrap pr-6 pb-3;
+  @apply flex flex-row justify-start items-center w-full h-32 flex-wrap pr-6 pb-3;
 
   > .day-tip-text-container {
     @apply w-6 h-full grid grid-rows-7;
